--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
-#<!-- Write your HTML in this file -->
-<!DOCTYPE
+<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+
+  
 
 
 
 
 
-<html></html>
+
+
+</html>
